--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,17 @@ html, body {
   background: #111827;
   font-family: 'Rubik', sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .h-screen-93 {
   height: 93vh;
+}
+
+.custom-bg {
+  background-color: #1e293b;
+}
+
+.custom-shadow {
+  box-shadow: 5px 5px 10px #000c;
 }
